data/derived/fa15/progs/unify/prog3130.ml.out
Characters 127-135:
  | Sine expr -> Printf.sprintf "sin %s" exprToString expr
                                ^^^^^^^^
Error: This expression has type
         ('a -> 'b, unit, string, string, string, 'a -> 'b)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b, unit, string, string, string, string)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b is not compatible with type string 
